--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://LeagueNightEveryNight.github.io/Comp426",
+  "homepage": "https://leaguenighteverynight.github.io/final-project/",
   "name": "final-project",
   "version": "0.1.0",
   "private": true,
